...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="6Fu-va-lLK" id="e3Z-Ox-rub"/>
                            <outlet property="delegate" destination="6Fu-va-lLK" id="fwu-6M-xuG"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My things to do" id="Jyn-vq-EEV">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="gvU-wH-X58">
                            <color key="tintColor" name="textMainColour"/>
                            <connections>
                                <action selector="addButtonPressed:" destination="6Fu-va-lLK" id="e0u-KX-2lK"/>
                            </connections>
                        </barButtonItem>
...
