//
//  DoistaUITests.swift
//  DoistaUITests
//
//  Created by Andras Pal on 08/03/2021.
//  Copyright © 2021 Andras Pal. All rights reserved.
//

import XCTest

class DoistaUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
//        let app = XCUIApplication()
//        app.launch()
        
        let app = XCUIApplication()
        let addButton = app.navigationBars["My things to do"].buttons["Add"]
        addButton.tap()
        
        let addButton2 = app.alerts["Add a new category"].scrollViews.otherElements.buttons["Add"]
        addButton2.tap()
        addButton.tap()
        addButton.tap()
        addButton2.tap()
        
        let tablesQuery = app.tables
        let testCategory3StaticText = tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Test Category 3"]/*[[".cells.staticTexts[\"Test Category 3\"]",".staticTexts[\"Test Category 3\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        testCategory3StaticText.tap()
        
        let testCategory3NavigationBar = app.navigationBars["Test Category 3"]
        let addButton3 = testCategory3NavigationBar.buttons["Add"]
        addButton3.tap()
        addButton3.tap()
        addButton3.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["test todo 3"]/*[[".cells.staticTexts[\"test todo 3\"]",".staticTexts[\"test todo 3\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.swipeLeft()
        
        let deleteButton = tablesQuery/*@START_MENU_TOKEN@*/.buttons["Delete"]/*[[".cells.buttons[\"Delete\"]",".buttons[\"Delete\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        deleteButton.tap()
        
        let testTodo2StaticText = tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["test todo 2"]/*[[".cells.staticTexts[\"test todo 2\"]",".staticTexts[\"test todo 2\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        testTodo2StaticText.swipeLeft()
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["Edit"]/*[[".cells.buttons[\"Edit\"]",".buttons[\"Edit\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.alerts["Edit item"].scrollViews.otherElements.buttons["Cancel"].tap()
        testTodo2StaticText.tap()
        testTodo2StaticText.swipeLeft()
        deleteButton.tap()
        
        let myThingsToDoButton = testCategory3NavigationBar.buttons["My things to do"]
        myThingsToDoButton.tap()
        testCategory3StaticText.swipeLeft()
        myThingsToDoButton.tap()
        testCategory3StaticText.swipeLeft()
        myThingsToDoButton.tap()
        testCategory3StaticText.swipeRight()
        myThingsToDoButton.tap()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
